utilities/local-cluster/shared/k3s/registry/registry-service.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: registry-cors
  namespace: registry
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "HEAD"
    accessControlAllowOriginList:
      - "https://registry-ui.cluster.test"
      - "http://registry-ui.cluster.test"
    accessControlAllowCredentials: false
    accessControlMaxAge: 100
    addVaryHeader: true
    accessControlAllowHeaders:
      - "Authorization"
      - "Accept"
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: registry
---
apiVersion: v1
kind: Service
metadata:
  name: registry-raw
  namespace: registry
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-volume
              mountPath: /var/lib/registry
          resources:
            limits:
              cpu: "0.2"
              memory: 500Mi
            requests:
              cpu: "0.1"
              memory: 100Mi
      volumes:
        - name: registry-volume
          persistentVolumeClaim:
            claimName: registry-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    traefik.ingress.kubernetes.io/router.middlewares: registry-registry-cors@kubernetescrd
spec:
  rules:
    - host: registry.cluster.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 80
  tls:
    - secretName: registry-tls
      hosts:
        - registry.cluster.test
