utilities/local-cluster/shared/k3s/registry/registry-ui.yaml
# cspell: words joxit kubernetescrd
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: registry
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: registry-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
  namespace: registry
spec:
  selector:
    matchLabels:
      app: registry-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - name: registry-ui
          image: joxit/docker-registry-ui:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.2"
              memory: 500Mi
            requests:
              cpu: "0.1"
              memory: 100Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui-ingress
  namespace: registry
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  rules:
    - host: registry-ui.cluster.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-ui
                port:
                  number: 80
